--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "react": "^17.0.2",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.3.0",
+    "styled-components": "^5.3.1",
     "typescript": "~4.1.5"
   },
   "scripts": {
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.1"
+    "@types/react-router-dom": "^5.3.1",
+    "@types/styled-components": "^5.1.14"
   }
 }
